# rill

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
packaging/usr/share/applications/: com.github.sachesi.rill.desktop
po/: POTFILES  rill.pot  uk.po
resources/: rill.desktop  rill.gresource.xml
resources/ui/: add-dialog.ui  info-dialog.ui  torrent-row.ui  window.ui
src/: engine.rs  listener.rs  logging.rs  main.rs  ui.rs  util.rs
src/application/: add_dialog.rs  app.rs  info_dialog.rs  mod.rs  preferences.rs  torrent_row.rs  tray.rs  window.rs
src/model/: file_object.rs  mod.rs  torrent_model.rs  torrent_object.rs
src/storage/: db.rs  mod.rs  models.rs
