[package]
name = "rill"
version = "0.1.0"
edition = "2024"
description = "Minimalistic BitTorrent client for GNOME"
license = "GPL-3.0-or-later"

[[bin]]
name = "rill"
path = "src/main.rs"

[dependencies]
mtorrent = "0.5"
adw = { package = "libadwaita", version = "0.9", features = ["v1_4"] }
gtk = { package = "gtk4", version = "0.11", features = ["v4_12"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "io-util", "net"] }
async-channel = "2"
log = "0.4"
env_logger = "0.11"
dirs-next = "2"
serde = "1"
serde_json = "1"
urlencoding = "2"

[build-dependencies]
glib-build-tools = "0.20"
