[package]
name = "rill"
version = "0.1.3"
edition = "2024"
description = "Minimalistic BitTorrent client for GNOME"
license = "GPL-3.0-or-later"

[[bin]]
name = "rill"
path = "src/main.rs"

[dependencies]
mtorrent = "0.5"
adw = { package = "libadwaita", version = "0.9", features = ["v1_4"] }
gtk = { package = "gtk4", version = "0.11", features = ["v4_12"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "io-util", "net"] }
async-channel = "2"
log = "0.4"
env_logger = "0.11"
dirs-next = "2"
serde = "1"
serde_json = "1"
urlencoding = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
sha1 = "0.10"
ksni = { version = "0.3.4", default-features = false, features = ["blocking", "async-io"] }

[build-dependencies]
glib-build-tools = "0.20"

# mtorrent (0.5.2) ships a `debug_assert!(false, "AvailabilityReporter overflow")`
# that fires whenever the per-peer "Have" broadcast lags under fast downloads, plus
# a debug-only panic hook in `single_torrent` that turns any panic into
# `process::exit(1)`. Together they crash dev builds mid-download. Disabling
# debug-assertions for just these crates flips `cfg(debug_assertions)` off there,
# compiling out both the assert and the exit hook, while keeping rill's own
# debug-assertions intact.
[profile.dev.package.mtorrent]
debug-assertions = false

[profile.dev.package.mtorrent-core]
debug-assertions = false

[patch.crates-io]
mtorrent-core = { path = "third_party/mtorrent-core" }
